--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,24 @@
 @import "tailwindcss";
 
-/* Custom scrollbar */
 ::-webkit-scrollbar {
   height: 8px;
   width: 8px;
 }
 
 ::-webkit-scrollbar-track {
-  background: #1f2937; /* np. bg-gray-800 */
+  background: #1f2937;
   border-radius: 9999px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #4b5563; /* np. bg-gray-600 */
+  background: #4b5563;
   border-radius: 9999px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #6b7280; /* jaśniejszy odcień */
+  background: #6b7280;
 }
 
-/* Dla Firefoxa */
 * {
   scrollbar-width: thin;
   scrollbar-color: #4b5563 #1f2937;
